Added Social Media, Menu, and Source Link.

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -3,3 +3,6 @@
 @import 'modules/home';
 @import 'modules/bgLines';
 @import 'modules/scrollBtn';
+@import 'modules/menu';
+@import 'modules/socialNav';
+
