--- a/src/stylesheets/modules/_scrollBtn.scss
+++ b/src/stylesheets/modules/_scrollBtn.scss
@@ -8,6 +8,7 @@
   border-radius: 50%;
   width: 62px;
   height: 62px;
+  text-align: center;
 }
 #scroll-btn {
   border-radius: 50%;
@@ -32,4 +33,15 @@
   left: 50%;
   transform: translate(-50%, -25%);
   z-index: 1;
+}
+
+.scroll-btn-text {
+  position: absolute;
+  color: #FFF;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 10px;
+  top: -20px; 
+  left: 50%;
+  width: 120%;
+  transform: translateX(-50%);
 }
