Added navigation bar.

--- a/src/stylesheets/modules/_scrollBtn.scss
+++ b/src/stylesheets/modules/_scrollBtn.scss
@@ -21,7 +21,7 @@
 }
 #scroll-btn:hover {
   path {
-    stroke: #581B1B;
+    stroke: #fff;
     stroke-dasharray: 190;
     stroke-dashoffset: 0;
     transition: 0.35s ease-in-out;
