--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -5,37 +5,4 @@
 @import 'modules/scrollBtn';
 @import 'modules/menu';
 @import 'modules/socialNav';
-
-.title {
-  position: absolute;
-  margin: 0 auto;
-  left: 48%;
-  top: 25%;
-
-  h1 {
-    color: #fff;
-    font-size: 60px;
-    margin: 0;
-    font-family: 'Lato', sans-serif;
-  }
-}
-
-
-.test-path {
-    stroke-dasharray: 180;
-    stroke-dashoffset: 180;
-    transition: 2.5s ease-in;
-}
-
-.test-path-2 {
-  stroke-dashoffset: 0;
-}
-
-// #G {
-//   stroke: red;
-//   path {
-//     stroke: red;
-//     stroke-dasharray: 30;
-//     stroke-dashoffset: 30;
-//   }
-// }
+@import 'modules/navbar';
