--- a/src/stylesheets/modules/_home.scss
+++ b/src/stylesheets/modules/_home.scss
@@ -8,3 +8,35 @@
   text-decoration: none;
   margin: 0;
 }
+
+
+
+
+
+// Glendale Title
+
+.title {
+  position: absolute;
+  margin: 0 auto;
+  left: 48%;
+  top: 25%;
+
+  h1 {
+    color: #fff;
+    font-size: 60px;
+    margin: 0;
+    font-family: 'Lato', sans-serif;
+  }
+}
+
+.test-path {
+    stroke-dasharray: 180;
+    stroke-dashoffset: 180;
+    transition: 2.5s ease-in;
+}
+
+.test-path-2 {
+  stroke-dashoffset: 0;
+}
+
+
