Addedhome titles and button.

--- a/src/stylesheets/modules/_home.scss
+++ b/src/stylesheets/modules/_home.scss
@@ -18,14 +18,14 @@
 .title {
   position: absolute;
   margin: 0 auto;
-  left: 48%;
-  top: 25%;
+  left: 43%;
+  top: 22%;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
 
-  h1 {
-    color: #fff;
-    font-size: 60px;
-    margin: 0;
-    font-family: 'Lato', sans-serif;
+  img {
+    margin-left: 100px;
   }
 }
 
@@ -39,4 +39,39 @@
   stroke-dashoffset: 0;
 }
 
+
+// Sub-Title
+
+.sub-title-container {
+  position: relative;
+  top: 50px;
+  left: 180px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sub-title {
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  font-style: italic;
+  padding: 5px;
+
+  span {
+    font-weight: 100;
+    font-style: normal;
+  }
+}
+
+.portfolio-btn {
+  background-color: rgba(0,0,0,0.4);
+  width: 200px;
+  height: 40px;
+  border: 1px solid #fff;
+  color: #fff;
+  font-size: 14px;
+  margin: 5px;
+  cursor: pointer;
+}
 
