--- a/src/stylesheets/modules/_normalize.scss
+++ b/src/stylesheets/modules/_normalize.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:100|Open+Sans+Condensed:700|Open+Sans:300,300i,400');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100i,400|Open+Sans+Condensed:700|Open+Sans:300,300i,400');
 
 html {
   height: 100%;
