--- a/src/stylesheets/modules/_home.scss
+++ b/src/stylesheets/modules/_home.scss
@@ -18,7 +18,7 @@
 .title {
   position: absolute;
   margin: 0 auto;
-  left: 40%;
+  // left: 40%;
   top: 20%;
   display: flex;
   flex-direction: column;
@@ -26,6 +26,11 @@
   img {
     margin-left: 100px;
   }
+
+  @include tablet-min {
+    left: 40%;
+  }
+
 }
 
 .test-path {
@@ -55,10 +60,15 @@
 .sub-title-container {
   position: relative;
   top: 50px;
-  left: 180px;
+  // left: 20px;
+  left: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @include tablet-min {
+    left: 180px;
+  }
 }
 
 .sub-title {
