--- a/src/stylesheets/modules/_layout.scss
+++ b/src/stylesheets/modules/_layout.scss
@@ -20,20 +20,32 @@
 }
 
 .rectangle {
-  width: 450px;
-  height: 300%;
-  background-color: black;
-  position: absolute;
-  top: 220px;
-  right: -70px;
-  transform-origin: top right;
-  transform: rotate(39deg);
-  opacity: 0.18;
-  z-index: 1;
+  display: none;
+
+  @include desktop-min {
+    width: 450px;
+    height: 300%;
+    background-color: black;
+    position: absolute;
+    top: 220px;
+    right: -70px;
+    transform-origin: top right;
+    transform: rotate(39deg);
+    opacity: 0.18;
+    z-index: 1;
+    display: block;
+  }
+  @include lg-desktop {
+    width: 650px;
+    top: 300px;
+    right: -160px;
+  }
 }
+
 
 .logo {
   position: relative;
   top: 10px; 
   left: 15px;
+  cursor: pointer;
 }
