Made social links and source link mobile-friendly.

--- a/src/stylesheets/modules/_home.scss
+++ b/src/stylesheets/modules/_home.scss
@@ -1,12 +1,16 @@
 .source-link {
-  color: #fff;
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 12px;
-  position: absolute;
-  right: 15px;
-  bottom: 10px;
-  text-decoration: none;
-  margin: 0;
+  display: none;
+  
+  @include tablet-min {
+    color: #fff;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 12px;
+    position: absolute;
+    right: 15px;
+    bottom: 10px;
+    text-decoration: none;
+    margin: 0;
+  }
 }
 
 
