--- a/src/stylesheets/modules/_menu.scss
+++ b/src/stylesheets/modules/_menu.scss
@@ -1,17 +1,30 @@
 
 .menu {
   position: absolute;
-  top: 10px;
+  top: 15px;
   right: 15px;
   margin: 0;
   display: flex;
   align-items: center;
+
+  @include tablet-min {
+    top: 10px;
+  }
+
+  @include lg-desktop {
+    top: 25px;
+    right: 25px;
+  }
 
   p {
     color: #fff;
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 12px;
     margin: 0 12px 0 0;
+    @include lg-desktop {
+      font-size: 20px;
+      margin: 0 20px 0 0;
+    }
   }
 }
 
@@ -20,6 +33,11 @@
   height: 16px;
   position: relative;
   cursor: pointer;
+
+  @include lg-desktop {
+      width: 40px;
+      height: 32px;
+  }
 
   &::before {
     position: absolute;
@@ -30,6 +48,12 @@
     width: 19px;
     height: 2px;
     background-color: white;
+
+    @include lg-desktop {
+        width: 40px;
+        height: 5px;
+    }
+      
   }
 
   .hamburger-mid {
@@ -38,6 +62,12 @@
     width: 19px;
     height: 2px;
     background-color: white;
+
+    @include lg-desktop {
+        top: 13px;
+        width: 40px;
+        height: 5px;
+    }
   }
 
   &::after {
@@ -49,6 +79,11 @@
     width: 19px;
     height: 2px;
     background-color: white;
+
+    @include lg-desktop {
+        width: 40px;
+        height: 5px;
+    }
   }
 }
 
