--- a/src/stylesheets/modules/_socialNav.scss
+++ b/src/stylesheets/modules/_socialNav.scss
@@ -11,6 +11,12 @@
     display: flex;
   }
 
+  @include lg-desktop {
+    bottom: 25px;
+    left: 25px;
+    font-size: 20px;
+  }
+
   a {
     color: #fff;
     text-decoration: none;
