--- a/src/stylesheets/modules/_layout.scss
+++ b/src/stylesheets/modules/_layout.scss
@@ -33,7 +33,15 @@
   height: calc(100% - 50px);
   position: absolute;
   z-index: 10; 
+  // overflow: hidden;
+}
+
+.page-layout {
+  width: 100%;
+  height: 100%;
   overflow: hidden;
+  position: absolute;
+  z-index: 0;
 }
 
 .rectangle {
