--- a/src/stylesheets/modules/_portfolio.scss
+++ b/src/stylesheets/modules/_portfolio.scss
@@ -20,6 +20,11 @@
   top: 60%;
   transform: translateY(-50%);
   display: flex;
+  width: 66vw;
+  height: 22vw;
+  background-color: rgba(0,0,0,0.2);
+  overflow: hidden;
+
 }
 
 .project {
