--- a/src/stylesheets/modules/_portfolio.scss
+++ b/src/stylesheets/modules/_portfolio.scss
@@ -21,10 +21,10 @@
   transform: translateY(-50%);
   display: flex;
   width: 66vw;
-  height: 22vw;
-  background-color: rgba(0,0,0,0.2);
+  height: 25vw;
   overflow: hidden;
   z-index: 2;
+  align-items: center;
 }
 
 
@@ -37,18 +37,46 @@
   // border-right: 10px solid maroon;
   // border: 10px solid rgba(0,0,0,0);
   background-color: lightgray;
+  background-size: cover;
+  background-position: center;
   cursor: pointer;
+  overflow: hidden;
+  display: flex;
+  align-items: flex-end;
+  box-shadow: 0px 12px 20px -12px black;
 
   &:first-child {
     margin-left: 0;
   }
   
   &:hover {
-    box-shadow: none;
+
   }
 }
 
 .project-slider {
   width: auto;
   display: flex;
+}
+
+.project-overlay {
+
+  width: 100%;
+  height: 100%;
+  // background-color: rgba(0, 0, 0, 0.2);
+  // background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.68));
+  // position: absolute;
+  bottom: 0;
+  // box-shadow: 0 -30px 45px 10px rgba(0, 0, 0, 0.45);
+  display: flex;
+  align-items: flex-end;
+  padding: 8px; 
+}
+
+.project-name {
+  font-size: 16px;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  margin: 15px 0;
 }
