--- a/src/stylesheets/modules/_variables.scss
+++ b/src/stylesheets/modules/_variables.scss
@@ -29,11 +29,11 @@ $lg-desktop-width: 1281px;
   }
 }
 
-// @mixin phone {
-//   @media (max-width: #{$phone-width}) {
-//     @content;
-//   }
-// }
+@mixin phone {
+  @media (max-width: #{$phone-width}) {
+    @content;
+  }
+}
 
 
 @mixin lg-desktop {
