--- a/src/stylesheets/modules/_portfolio.scss
+++ b/src/stylesheets/modules/_portfolio.scss
@@ -20,37 +20,44 @@
   top: 60%;
   transform: translateY(-50%);
   display: flex;
-  width: 66vw;
-  height: 25vw;
+  width: 88vw;
+  height: 24vw;
   overflow: hidden;
   z-index: 2;
   align-items: center;
+
+  @include phone {
+    height: 300px;
+  }
 }
 
 
 .project {
   width: 22vw;
-  height: 22vw;
+  height: 17vw;
   // margin: 0 10px;
   margin-left: 20px;
   // border-left: 10px solid maroon;
   // border-right: 10px solid maroon;
   // border: 10px solid rgba(0,0,0,0);
-  background-color: lightgray;
+  background-color: #fff;
   background-size: cover;
   background-position: center;
   cursor: pointer;
   overflow: hidden;
   display: flex;
+  flex-direction: column;
   align-items: flex-end;
-  box-shadow: 0px 12px 20px -12px black;
+  // box-shadow: 0px 14px 25px -15px black;
+  // border-radius: 5px;
 
   &:first-child {
     margin-left: 0;
   }
   
-  &:hover {
-
+  @include phone {
+    height: 175px;
+    width: 250px;
   }
 }
 
@@ -59,23 +66,30 @@
   display: flex;
 }
 
-.project-overlay {
+.project-detail-container {
 
   width: 100%;
-  height: 100%;
-  // background-color: rgba(0, 0, 0, 0.2);
-  // background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.68));
-  // position: absolute;
+  height: 30%;
   bottom: 0;
-  // box-shadow: 0 -30px 45px 10px rgba(0, 0, 0, 0.45);
   display: flex;
-  align-items: flex-end;
+  // align-items: flex-end;
   padding: 8px; 
+  // position: relative;
+  // bottom: 20px;
+  // margin: 0 auto;
+  background-color: #fff;
+}
+.project-img {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  // border: 8px solid #fff;
 }
 
 .project-name {
   font-size: 16px;
-  color: #fff;
+  color: rgb(60,60,60);
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
   margin: 15px 0;
