--- a/src/stylesheets/modules/_portfolio.scss
+++ b/src/stylesheets/modules/_portfolio.scss
@@ -21,26 +21,43 @@
   transform: translateY(-50%);
   display: flex;
   width: 88vw;
-  height: 24vw;
+  // height: 24vw;
   overflow: hidden;
   z-index: 2;
   align-items: center;
 
   @include phone {
-    height: 300px;
+    // height: 300px;    
+    left: -26px;
+    width: calc(100% + 52px);
+  
   }
 }
 
-
-.project {
+.project-container {
   width: 22vw;
   height: 17vw;
+  padding: 0 10px;
+  background-color: rgba(0,0,0,0);
+
+  @include phone {
+    // height: 175px;
+    // width: 250px;
+    width: 60vw;
+    height: 25vh;
+  }
+}
+
+.project {
+  // width: 22vw;
+  // height: 17vw;
+  width: 100%;
+  height: 100%;
   // margin: 0 10px;
-  margin-left: 20px;
+  // margin-left: 20px;
   // border-left: 10px solid maroon;
   // border-right: 10px solid maroon;
   // border: 10px solid rgba(0,0,0,0);
-  background-color: #fff;
   background-size: cover;
   background-position: center;
   cursor: pointer;
@@ -51,14 +68,10 @@
   // box-shadow: 0px 14px 25px -15px black;
   // border-radius: 5px;
 
-  &:first-child {
-    margin-left: 0;
-  }
-  
-  @include phone {
-    height: 175px;
-    width: 250px;
-  }
+  // &:first-child {
+  //   margin-left: 0;
+  // }
+
 }
 
 .project-slider {
@@ -93,4 +106,12 @@
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
   margin: 15px 0;
+}
+
+.project-circle {
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  background-color: lightblue;
+  border-radius: 50%;
 }
