--- a/src/stylesheets/modules/_portfolio.scss
+++ b/src/stylesheets/modules/_portfolio.scss
@@ -14,6 +14,20 @@
   margin: 0; 
 }
 
+
+.project-circle {
+  position: absolute;
+  width: 33vw;
+  height: 33vw;
+  // background-color: lightblue;
+  border-radius: 50%;
+  top: 60%;
+  transform: translateY(-50%);
+  right: 20.5vw;
+  margin-right: -26px;
+  border: 1px solid #fff;
+}
+
 .slider-container {
   position: absolute;
   right: -26px;
@@ -108,10 +122,69 @@
   margin: 15px 0;
 }
 
-.project-circle {
+.project-number {
+    color: rgb(60,60,60);
+    font-size: 25px;
+    position: absolute;
+    left: 23%;
+    top: 7%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 50%;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+}
+
+.project-title {
+  color: #fff;
   position: absolute;
-  width: 400px;
-  height: 400px;
-  background-color: lightblue;
-  border-radius: 50%;
+  bottom: 12%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  font-size: 19px;
+}
+
+
+.link-container {
+  position: absolute;
+  border-radius: 17px;
+  bottom: 7%;
+  right: 34%;
+  transform: translate(50%,50%);
+  font-size: 15px;
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+}
+
+.project-source {
+  color: rgb(60,60,60);
+  display: block;
+  background-color: #fff;
+  // position: absolute;
+  padding: 4px 17px;
+  border-radius: 17px;
+  // bottom: 8%;
+  // right: 21%;
+  // transform: translate(50%,50%);
+  font-size: 13px;
+  font-family: 'Roboto', sans-serif;
+  margin-right: 10px;
+}
+
+.project-link {
+  color: rgb(60,60,60);
+  display: block;
+  background-color: #fff;
+  // position: absolute;
+  padding: 4px 17px;
+  border-radius: 17px;
+  // bottom: 8%;
+  // left: 21%;
+  // transform: translate(-50%, 50%);
+  font-size: 13px;
+  font-family: 'Roboto', sans-serif;
+  // margin: 5px;
 }
