--- a/src/stylesheets/modules/_portfolio.scss
+++ b/src/stylesheets/modules/_portfolio.scss
@@ -6,12 +6,21 @@
   p {
     text-align: right;
   }
+
+  @include phone {
+    top: 16%;
+  }
 }
 
 .portfolio-title {
   color: #fff;
   font-family: 'Poppins', sans-serif;
   margin: 0; 
+
+
+  @include phone {
+    font-size: 25px;
+  }
 }
 
 
@@ -27,6 +36,21 @@
   margin-right: -26px;
   border: 1px solid #fff;
   z-index: 1;
+
+  @include phone {
+    position: absolute;
+    width: 69vw;
+    height: 96vw;
+    top: 60%;
+    border-radius: 50%;
+    transform: translateY(-50%);
+    /* right: 20.5vw; */
+    left: 2vw;
+    margin-right: -26px;
+    border: 1px solid #fff;
+    z-index: 1;
+
+  }
 }
 
 .slider-container {
@@ -80,7 +104,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  // box-shadow: 0px 14px 25px -15px black;
+  box-shadow: 0px 14px 25px -15px black;
   // border-radius: 5px;
 
   // &:first-child {
@@ -146,6 +170,13 @@
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   font-size: 19px;
+
+  @include phone {
+    bottom: 10%;
+    font-size: 23px;
+    width: 100%;
+    text-align: center;
+  }
 }
 
 
@@ -158,6 +189,9 @@
   font-size: 15px;
   font-family: 'Roboto', sans-serif;
   display: flex;
+  @include phone {
+    bottom: 2%;
+  }
 }
 
 .project-source {
@@ -174,6 +208,11 @@
   font-family: 'Roboto', sans-serif;
   margin-right: 10px;
   text-decoration: none;
+
+   @include phone {
+    padding: 8px 20px;
+    font-size: 18px;
+  }
 }
 
 .project-link {
@@ -190,6 +229,12 @@
   font-family: 'Roboto', sans-serif;
   // margin: 5px;
   text-decoration: none;
+
+  @include phone {
+    padding: 8px 20px;
+    font-size: 18px;
+  }
+
 }
 
 .project-tech {
@@ -202,8 +247,13 @@
   transform: translateY(-50%);
   width: 100%;
   line-height: 150%;
+  display: block;
   span {
     text-decoration: underline;
     margin-left: -20px;
+  }
+
+  @include phone {
+    display: none;
   }
 }
