--- a/src/stylesheets/modules/_layout.scss
+++ b/src/stylesheets/modules/_layout.scss
@@ -78,3 +78,11 @@
   left: 15px;
   cursor: pointer;
 }
+
+
+.bg-overlay {
+  width: 100%;
+  height: 100vh;
+  background-color: maroon;
+  transition: background-color 0.3s ease-in-out;
+}
