--- a/src/stylesheets/modules/_contact.scss
+++ b/src/stylesheets/modules/_contact.scss
@@ -107,12 +107,21 @@
   @include phone {
     color: #49a963;
   }
+
+  @include lg-desktop {
+    font-size: 36px;
+    margin: 0 0 0 40px;
+  }
 }
 
 .contact-form {
   padding: 10px 30px;
   width: 100%;
   height: 85%;
+
+  @include lg-desktop {
+    padding: 10px 50px;
+  }
 }
 
 .input {
@@ -133,6 +142,10 @@
   @include phone {
     border-bottom: 1px solid #fff;
   }
+
+  @include lg-desktop {
+    font-size: 20px;
+  }
 }
 
 .form-textarea {
@@ -143,7 +156,6 @@
   border-left: 0;
   border-right: 0;
   border-bottom: 1px solid #232f46;
-  // margin: 5px 0;
   outline: none;
   background-color: rgba(0,0,0,0);
   display: block;
@@ -154,6 +166,10 @@
 
   @include phone {
     border-bottom: 1px solid #fff;
+  }
+
+  @include lg-desktop {
+    font-size: 20px;
   }
 }
 
@@ -178,6 +194,11 @@
     background-color: #49a963;
     color: #fff;
   }
+
+  @include lg-desktop {
+    padding: 12px 15px;
+    font-size: 22px;
+  }
 }
 
 .contact-title-container {
@@ -194,4 +215,8 @@
   color: #fff;
   font-family: 'Poppins', sans-serif;
   margin: 0; 
+
+  @include lg-desktop {
+    font-size: 55px;
+  }
 }
