--- a/src/stylesheets/modules/_home.scss
+++ b/src/stylesheets/modules/_home.scss
@@ -65,7 +65,7 @@
 // Acosta-Title
 
 #AcostaSVG {
-  margin-left: 100px;
+  margin-left: 88px;
   @include lg-desktop {  
     width: auto;
     height: 110px;
@@ -90,7 +90,8 @@
   position: relative;
   top: 50px;
   // left: 20px;
-  left: 60px;
+  left: 30px;
+  // right: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -98,6 +99,7 @@
   @include tablet-min {
     left: 180px;
   }
+
   @include lg-desktop {
     top: 80px;
     left: 240px;
