--- a/src/stylesheets/modules/_menu.scss
+++ b/src/stylesheets/modules/_menu.scss
@@ -87,3 +87,76 @@
   }
 }
 
+.menu-modal {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 9999;
+  background-color: rgba(21, 32, 56, 0.98);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu-container {
+  width: 80%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  a {
+    color: #fff;
+    text-decoration: none;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 28px;
+  }
+
+  hr {
+    opacity: 0;
+  }
+}
+
+.x {
+  width: 40px;
+  height: 40px;
+  position: absolute; 
+  top: 0;
+  right: 0;
+  cursor: pointer;
+
+  &::before {
+    content: '';
+    width: 40px;
+    height: 3px;
+    position: absolute;
+    top: 50%;
+    background-color: #fff;
+    transform-origin: center center;
+    transform: translate(-50%) rotate(45deg);
+    left: 50%;
+  }
+
+  &::after {
+    content: '';
+    width: 40px;
+    height: 3px;
+    position: absolute;
+    top: 50%;
+    background-color: #fff;
+    transform-origin: center center;
+    transform: translate(-50%) rotate(-45deg);
+    left: 50%;
+  }
+
+}
+
+
+
+
+
