--- a/src/stylesheets/modules/_portfolio.scss
+++ b/src/stylesheets/modules/_portfolio.scss
@@ -36,7 +36,7 @@
   position: absolute;
   width: 33vw;
   height: 33vw;
-  background-color: #300d13;
+  background-color: rgba(0,0,0,0);
   border-radius: 50%;
   top: 60%;
   transform: translateY(-50%);
